# langgraph-agentic-dev-starter

./: .gitignore  CLAUDE.MD  README.md
agent-service/: pyproject.toml
agent-service/app/: logging_utils.py  main.py
agent-service/app/agents/: __init__.py  code_agent.py  task_execution.py
agent-service/app/agents/builder/: __init__.py  software_builder_agent.py
agent-service/app/agents/docgen/: __init__.py  documentation_generator_agent.py
agent-service/app/agents/manager/: __init__.py  langgraph_manager.py  manager_agent.py
agent-service/app/agents/planner/: __init__.py  mock_responses.py  models.py  planner_agent.py  prompt.py
agent-service/app/api/: __init__.py  routes.py  workflow_events.py
agent-service/app/classifier/: __init__.py  task_identifier.py
agent-service/app/core/: __init__.py  base_evaluator.py  base_llm.py  base_router.py  base_tool.py  task_state.py
agent-service/app/evaluators/: __init__.py  syntax_evaluator.py
agent-service/app/executors/: __init__.py  code_executor.py  prompts.py
agent-service/app/health/: __init__.py  health.py
agent-service/app/llm/: __init__.py  grok_client.py  mock_client.py  openrouter_client.py  registry.py
agent-service/app/models/: __init__.py  agents.py  execution.py  planning.py
agent-service/app/routers/: __init__.py  prompts.py  task_identifier.py
agent-service/app/tools/: __init__.py  code_executor.py  syntax_checker.py
agent-service/scripts/: test_planner_e2e.py
agent-service/tests/: test_llm_registry.py  test_models.py  test_planner_agent.py  test_planner_prompt.py
(+15 files in other folders)
